Bug 210081 - info missing in copy progress notification
Summary: info missing in copy progress notification
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: notifications (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Rob Scheepmaker
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-10-10 15:12 UTC by ash
Modified: 2009-11-16 12:52 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
copy notification in 4.3.2 (42.00 KB, image/png)
2009-10-10 15:15 UTC, ash
Details

Note You need to log in before you can comment on or make changes to this bug.
Description ash 2009-10-10 15:12:59 UTC
Version:           4.3.2 (using Devel)
OS:                Linux
Installed from:    Compiled sources

when copying or downloading files the line with kbps and remaining time of the single task is missing. only the main remaining time is shown

ok in 4.3.1
missing in 4.3.2
Comment 1 ash 2009-10-10 15:15:18 UTC
Created attachment 37493 [details]
copy notification in 4.3.2
Comment 2 Dario Andres 2009-10-10 20:03:57 UTC
This is probably caused by the fix to bug 199346
Comment 3 Dario Andres 2009-10-31 21:27:42 UTC
SVN commit 1043127 by darioandres:

- Fix the Speed and ETA of the file transfers not being shown in the Plasma notifications
  - The applicationjobs dataengine now should notify about speed changes
  * It should not affect anything else, but it may need more testing...

I will investigate to backport to 4.3.x

CCBUG: 210081
CCMAIL: aseigo@kde.org



 M  +9 -1      applets/systemtray/ui/jobwidget.cpp  
 M  +1 -1      applets/systemtray/ui/jobwidget.h  
 M  +2 -0      dataengines/applicationjobs/kuiserverengine.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1043127
Comment 4 Dario Andres 2009-11-01 00:30:43 UTC
SVN commit 1043176 by darioandres:

- Small fix to my previous fix (rev. 1043127) : only show ETA and Speed if the job is running
  (Otherwise, this data will override the "Paused" message setted before.)

CCBUG: 210081
CCMAIL: aseigo@kde.org


 M  +8 -6      jobwidget.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1043176
Comment 5 Dario Andres 2009-11-01 00:48:33 UTC
SVN commit 1043183 by darioandres:

Backport to 4.3 of:
SVN commit 1043127 by darioandres
SVN commit 1043176 by darioandres

- Fix the Speed and ETA of the file transfers not being shown in the Plasma
notifications
  - The applicationjobs dataengine now should notify about speed changes
  * The ETA and Speed are only shown if the job is running
  * It should not affect anything else, but it may need more testing...

If this is tested properly, should it be included on the already tagged 4.3.3 builds ?

BUG: 210081
CCMAIL: aseigo@kde.org


 M  +10 -0     applets/systemtray/ui/jobwidget.cpp  
 M  +1 -1      applets/systemtray/ui/jobwidget.h  
 M  +2 -0      dataengines/applicationjobs/kuiserverengine.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1043183
Comment 6 Archish 2009-11-16 04:06:43 UTC
I find the issue existing in 4.3.3 Any proposed version by which this bug will be included in the final build?
Comment 7 Dario Andres 2009-11-16 12:52:36 UTC
It is fixed for 4.4 and 4.3.4 (to be released in two weeks). It wasn't critical enough to patch the current 4.3.3 packages