Backport to 4.3 of: SVN commit 1043127 by darioandres SVN commit 1043176 by darioandres

- Fix the Speed and ETA of the file transfers not being shown in the Plasma
notifications
  - The applicationjobs dataengine now should notify about speed changes
  * The ETA and Speed are only shown if the job is running
  * It should not affect anything else, but it may need more testing...

If this is tested properly, should it be included on the already tagged 4.3.3 builds ?

BUG: 210081
CCMAIL: aseigo@kde.org

svn path=/branches/KDE/4.3/kdebase/workspace/; revision=1043183